--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         <h2> Week One - HTML Intro</h2>
     <ul>
         <li>
-            <a href="week01/lab01/index.html">Lab 1 - Creating your first HTML page</a>
+            <a href="week01/lab01.html">Lab 1 - Creating your first HTML page</a>
         </li>
     </ul>
 
         <h2> Week Two - HTML Basics</h2>
     <ul>
         <li>
-            <a href="week02/lab01/index.html">Lab 1 - Formatting text</a>
+            <a href="week02/lab01.html">Lab 1 - Formatting text</a>
         </li>
         <li>
-            <a href="week02/lab02/index.html">Lab 2 - Layout Elements</a>
+            <a href="week02/lab02.html">Lab 2 - Layout Elements</a>
         </li>
         <li>
-            <a href="week02/lab03/index.html">Lab 3 - Adding an image</a>
+            <a href="week02/lab03.html">Lab 3 - Adding an image</a>
         </li>
     </ul>
     <h2> Week Three - Links, lists, and deployment</h2>
