--- a/week02/lab03/index.html
+++ b/week02/lab03/index.html
@@ -10,7 +10,9 @@
     </header>
 
     <main>
+        <nav>
         <img src="images/jack.gif" alt="Picture of Jack" width="80" height="120" img>
+        </nav>
         <p>Jack is a very curious individual. When he's not busy telling <i>bad jokes</i> to his friends, he's <i>pulling pranks</i> on people with various props like cardboard boxes. Despite that, he has a <i>heart of gold</i> aand deeply cares for his friends and family</p>
         <p>Anyone who has lost track of time when using a computer knows the propensity to dream, the urge to make dreams come true and the tendency to miss lunch, from Tim Berners-Lee.
     </main>
