--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2> Bubble Under - Updated Weekly</h2>
     <ul>
         <li>
-            <a href="BubbleUnder/index.html">Bubble Under</a>
+            <a href="BubbleUnder/BubbleUnder/index.html">Bubble Under</a>
         </li>
     </ul>
 
