--- a/BubbleUnder/BubbleUnder/contact.html
+++ b/BubbleUnder/BubbleUnder/contact.html
@@ -12,8 +12,10 @@
 <p>Diving club for the south-west UK - let's make a splash!</p>
 </header>
 
-Contact Us
-To find out more, contact Club Secretary Bob Dobalina on 01793 641207 or email bob@bubbleunder.com.
+<main>
+    <h2>Contact Us</h2>
+    <p>To find out more, contact Club Secretary Bob Dobalina on 01793 641207 or email bob@bubbleunder.com.</p>
+</main>
 
 </body>
 </html>
