--- a/BubbleUnder/BubbleUnder/about.html
+++ b/BubbleUnder/BubbleUnder/about.html
@@ -12,6 +12,14 @@
 <p>Diving club for the south-west UK - let's make a splash!</p>
 </header>
 
+<nav>
+  <ul>
+    <li> <a href="index.html">Home</a> </li>
+    <li> <a href="about.html">About Us</a> </li>
+    <li> <a href="contact.html">Contact Us</a> </li>
+  </ul>
+</nav>
+
 <main>
     <h2>About Us</h2>
     <p>Bubble Under is a group of diving enthusiasts based in the
