--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <h2> Week Three - Links, lists, and deployment</h2>
     <ul>
         <li>
-            <a href="week03/lab01/index.html">Lab 1 - Links Exercise 1 (SETU Website)</a>
+            <a href="week03/lab01/lab01/index.html">Lab 1 - Links Exercise 1 (SETU Website)</a>
         </li>
         <li>
-            <a href="week03/lab02/index.html">Lab 2 - Links Exercise 2 (CV Website)</a>
+            <a href="week03/lab02/lab02/index.html">Lab 2 - Links Exercise 2 (CV Website)</a>
         </li>
         <li>
             <a href="week03/lab03/index.html">Lab 3 - Adding lists</a>
