--- a/week03/lab03/index.html
+++ b/week03/lab03/index.html
@@ -16,5 +16,11 @@
         <li>Tea</li>
         <li>Milk</li>
     </ol>
+
+    <ol start="50">
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ol>
 </body>
 </html>
