--- a/week03/lab03/index.html
+++ b/week03/lab03/index.html
@@ -22,5 +22,11 @@
         <li>Tea</li>
         <li>Milk</li>
     </ol>
+
+    <ol start="53" reversed>
+        <li>Milk</li>
+        <li>Tea</li>
+        <li>Coffee</li>
+    </ol>
 </body>
 </html>
