--- a/week03/lab03/index.html
+++ b/week03/lab03/index.html
@@ -28,5 +28,11 @@
         <li>Tea</li>
         <li>Coffee</li>
     </ol>
+
+    <ul>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ul>
 </body>
 </html>
