--- a/week03/lab03/index.html
+++ b/week03/lab03/index.html
@@ -34,5 +34,14 @@
         <li>Tea</li>
         <li>Milk</li>
     </ul>
+
+    <dl>
+        <dt>Coffee</dt>
+        <dd>Hot Black Drink</dd>
+        <dt>Tea</dt>
+        <dd>Hot Drink</dd>
+        <dt>Milk</dt>
+        <dt>Cold White Drink</dt>
+    </dl>
 </body>
 </html>
