--- a/week03/lab03/index.html
+++ b/week03/lab03/index.html
@@ -41,7 +41,7 @@
         <dt>Tea</dt>
         <dd>Hot Drink</dd>
         <dt>Milk</dt>
-        <dt>Cold White Drink</dt>
+        <dd>Cold White Drink</dd>
     </dl>
 </body>
 </html>
