--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="week03/lab03/index.html">Lab 3 - Adding lists</a>
         </li>
         <li>
-            <a href="index.html">Lab 4 - Deployment</a>
+            <a href="week04/lab01/lab01/index.html">Lab 4 - Deployment</a>
         </li>
     </ul>
 
