--- a/index.html
+++ b/index.html
@@ -49,8 +49,20 @@
         <li>
             <a href="week03/lab03/index.html">Lab 3 - Adding lists</a>
         </li>
+    </ul>
+    <h2> Week Four - CSS Introduction</h2>
+    <ul>
         <li>
-            <a href="week04/lab01/lab01/index.html">Lab 4 - Deployment</a>
+            <a href="week04/lab01/lab01/index.html">Lab 1 - Using CSS</a>
+        </li>
+    </ul>
+    <h2> Week Five - CSS Part 2</h2>
+    <ul>
+        <li>
+            <a href="week05/lab01/lab01/exercise1.html">Lab 1 - Class Exercise</a>
+        </li>
+        <li>
+            <a href="week05/lab01/lab01/exercise2.html">Lab 1 - ID Exercise</a>
         </li>
     </ul>
 
