--- a/week05/lab01/lab01/exercise1.html
+++ b/week05/lab01/lab01/exercise1.html
@@ -15,7 +15,7 @@
       font-style: italic;
     }
 
-    p.gray{
+    p.purple{
       background-color: purple;
       font-optical-sizing: white;
     }
@@ -32,7 +32,7 @@
 
   <p>Regular document text not affected by style sheet.</p>
 
-  <p class= gray">This paragraph uses the p.gray class</p>
+  <p class= "gray">This paragraph uses the p.gray class</p>
 
   <p class="red"> This paragraph uses the p.red class</p>
 
