--- a/week05/lab01/lab01/exercise1.html
+++ b/week05/lab01/lab01/exercise1.html
@@ -17,7 +17,7 @@
 
     p.purple{
       background-color: purple;
-      font-optical-sizing: white;
+      text-emphasis-color: white;
     }
 
     p.important{
