--- a/week05/lab01/exercise2.html
+++ b/week05/lab01/exercise2.html
@@ -28,7 +28,7 @@
 
 <p id="uppercase">This paragraph has had its text transformed to uppercase letters.</p>
     
-<p id="bigwords">In this paragraph, <span>just these words</span> stand out as different.</p>
+<p>In this paragraph, <span id="bigwords">just these words</span> stand out as different.</p>
     
 </body>
 </html>
