--- a/week05/lab01/exercise1.html
+++ b/week05/lab01/exercise1.html
@@ -17,7 +17,7 @@
 
     p.purple{
       background-color: purple;
-      text-emphasis-color: white;
+      color: white;
     }
 
     p.important{
@@ -37,9 +37,9 @@
 
   <p class="purple"> This paragraph uses the p.purple class</p>
 
-  <h2>This is a h1 heading</h2>
+  <h1>This is a h1 heading</h1>
 
-  <h2 class="important">This is an important h1 heading</h2>
+  <h1 class="important">This is an important h1 heading</h1>
 
   <p>This is a normal paragraph</p>
 
