--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <h2> Week Three - Links, lists, and deployment</h2>
     <ul>
         <li>
-            <a href="week03/lab01/lab01/index.html">Lab 1 - Links Exercise 1 (SETU Website)</a>
+            <a href="week03/lab01/index.html">Lab 1 - Links Exercise 1 (SETU Website)</a>
         </li>
         <li>
-            <a href="week03/lab02/lab02/index.html">Lab 2 - Links Exercise 2 (CV Website)</a>
+            <a href="week03/lab02/index.html">Lab 2 - Links Exercise 2 (CV Website)</a>
         </li>
         <li>
             <a href="week03/lab03/index.html">Lab 3 - Adding lists</a>
@@ -53,16 +53,19 @@
     <h2> Week Four - CSS Introduction</h2>
     <ul>
         <li>
-            <a href="week04/lab01/lab01/index.html">Lab 1 - Using CSS</a>
+            <a href="week04/lab01/index.html">Lab 1 - Using CSS</a>
+        </li>
+        <li>
+            <a href="week04/lab02/index.html">Lab 2 - Applying font and text styles</a>
         </li>
     </ul>
     <h2> Week Five - CSS Part 2</h2>
     <ul>
         <li>
-            <a href="week05/lab01/lab01/exercise1.html">Lab 1 - Class Exercise</a>
+            <a href="week05/lab01/exercise1.html">Lab 1 - Class Exercise</a>
         </li>
         <li>
-            <a href="week05/lab01/lab01/exercise2.html">Lab 1 - ID Exercise</a>
+            <a href="week05/lab01/exercise2.html">Lab 1 - ID Exercise</a>
         </li>
     </ul>
 
