--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
             <a href="week03/lab03/index.html">Lab 3 - Adding lists</a>
         </li>
     </ul>
-    <h2> Week Four - CSS Introduction</h2>
+    <h2> Week Four - CSS Part 1</h2>
     <ul>
         <li>
             <a href="week04/lab01/index.html">Lab 1 - Using CSS</a>
         </li>
         <li>
             <a href="week04/lab02/index.html">Lab 2 - Applying font and text styles</a>
+        </li>
+        <li>
+            <a href="week04/lab03/index.html">Lab 3 - Styling links and lists</a>
         </li>
     </ul>
     <h2> Week Five - CSS Part 2</h2>
